# hasher-test

./: Cargo.toml  Cargo.toml.sig  README.md  cert.key  cert.pgp  cert.sig
src/: main.rs
