[package]
name = "hasher-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.1"
sha2 = "0.11.0-pre.4"
#sha3 = "0.11.0-pre.2"
#sha2 = { git = "https://github.com/baloo/hashes", branch = "baloo/serialize-state/rebase" }
testresult = "0.4.0"
#"0.10.8"

#[patch.crates-io]
#crypto-common = "0.2.0-pre.4"
